# Interveil

./: .gitignore  .replit  Interveil_PRD.md  MAY_PRD.md  README.md  RUN.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md
interveil/: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
interveil-vscode/: package-lock.json  package.json  tsconfig.json
interveil-vscode/src/: extension.ts
interveil/config/: blocklist.json
interveil/examples/python/: README.md  basic_agent.py
interveil/examples/typescript/: README.md  basic-agent.ts
interveil/python/: README.md  pyproject.toml
interveil/python/interveil/: __init__.py  client.py
interveil/src/: cli.ts  index.ts  server.ts
interveil/src/api/: events.ts  health.ts  orchestration-routes.ts  sessions.ts
interveil/src/commands/: blocklist.ts  interceptor.ts
interveil/src/gateway/: auth.ts  llm-proxy.ts  mcp-proxy.ts  models.ts  streaming.ts
interveil/src/gateway/providers/: anthropic.ts  gemini.ts  openai.ts
interveil/src/integrations/: anthropic-sdk.ts  langchain.ts  openai-agents.ts
interveil/src/multiagent/: orchestration.ts
interveil/src/policy/: engine.ts
interveil/src/sdk/: client.ts  trace.ts
interveil/src/sidecar/: monitor.ts
interveil/src/store/: memory.ts  sqlite.ts
interveil/src/teams/: auth.ts  comments.ts
interveil/src/tools/: registry.ts
interveil/src/ui/: index.html  vite.config.ts
interveil/src/ui/src/: App.tsx  index.css  types.ts
interveil/src/ws/: broadcaster.ts
(+9 files in other folders)
