[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "interveil"
version = "0.1.0"
description = "Language-agnostic AI agent observability — Python SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["ai", "agent", "observability", "tracing", "llm"]

[project.optional-dependencies]
requests = ["requests>=2.28"]
async = ["aiohttp>=3.9"]
all = ["requests>=2.28", "aiohttp>=3.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["interveil*"]
